@@ -1,3 +1,14 @@
+2010-07-09  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Kent Tamura.
+
+        [WINCE] Buildfix for FrameWince after r47440
+        https://bugs.webkit.org/show_bug.cgi?id=41904
+
+        * page/wince/FrameWince.cpp: Added property svn:eol-style.
+        (WebCore::computePageRectsForFrame):
+        (WebCore::imageFromSelection):
+
 2010-07-09  Vitaly Repeshko  <vitalyr@chromium.org>
 
         Reviewed by Pavel Feldman.
